# CalCLI

./: CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: app-check.yml
include/calcli/: expression.h
src/: expression.cpp  main.cpp
tests/: test1.cpp
